<resources>
    <string name="app_name">LEMON BLISS</string>
    <string name="tip_bluetooth_permission">是否允许打开蓝牙？</string>
    <string name="lab_yes">是</string>
    <string name="lab_no">否</string>
    <string name="tip_infos">提示</string>
    <string name="content_simple_confirm_dialog">请注意，这是一个简单的提示性对话框！</string>
    <string name="lab_submit">确定</string>
    <string name="tip_warning">警告</string>
    <string name="content_warning">当前为开发环境，是否切换到真实环境？</string>
    <string name="lab_change">切换</string>
    <string name="lab_continue">继续</string>
    <string name="hint_please_input_password">请输入密码</string>
    <string name="tip_options">选项</string>
    <string name="tip_router_setting">路线设置</string>
    <string name="lab_choice">选择</string>
    <string name="tip_update">版本更新</string>
    <string name="content_downloading">正在下载中，请稍后...</string>
    <string name="tip_download_finished">下载完毕!</string>
    <string name="lab_cancel">取消</string>
    <string name="content_wait_for_receive_data">数据接收中，请稍后...</string>
    <string name="lab_edit">编辑</string>
    <string name="lab_add">添加</string>
    <string name="lab_delete">删除</string>
    <string name="lab_update">更新</string>
    <string name="tip_please_select_transfer_type">选择一种切换方式</string>
    <string name="tip_signature">签名</string>
    <string name="lab_clear">清除</string>
    <string name="tip_loading_message">正在加载数据...</string>
    <string name="tip_start">开始</string>
    <string name="tip_stop">停止</string>
    <string name="app_browser_name">XUI浏览器</string>
    <string name="style_default">默认样式</string>
    <string name="style_md_ios">Material Design &#038; iOS Style</string>
    <string name="lab_please_select">请选择</string>
    <string name="tip_number_only_error_message">数字必须大于0小于100!</string>
    <string name="regexp_number_only">^[1-9]?\\d$</string>
    <string name="common_example">示例图片</string>
    <string name="about_item_tips">小贴士</string>
    <string name="about_item_homepage">访问官网</string>
    <string name="about_item_wiki">说明文档</string>
    <string name="about_item_update">版本更新</string>
    <string name="about_item_sponsor">赞助项目</string>
    <string name="about_item_github">GitHub主页</string>
    <string name="about_copyright">© %1$s xuexiangjys All rights reserved.</string>
    <string name="about_item_add_qq_group">加入QQ官方交流群</string>
    <string name="title_sponsor_explain">&#160;&#160;&#160;&#160;你的打赏是我维护的动力，我将会列出所有打赏人员的清单在Github上作为凭证，打赏前请留下打赏项目的备注！</string>
    <string name="lab_exit_app">退出应用</string>
    <string name="lab_agree">同意</string>
    <string name="lab_disagree">不同意</string>
    <string name="lab_look_again">再次查看</string>
    <string name="lab_still_disagree">仍不同意</string>
    <string name="title_reminder">温馨提示</string>
    <string name="content_think_about_it_again">要不要再想想</string>
    <string name="content_privacy_explain_again">我们非常重视对你个人信息的保护，承诺严格按照《%s隐私权政策》保护及处理你的信息。如果你不同意该政策，很遗憾我们将无法为你提供服务</string>
    <string name="lab_privacy_name">《%s隐私权政策》</string>
    <string name="etv_content_demo1">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</string>
    <string name="t5">RippleShadowShadowButton\n
                app:sb_ripple_color=\"#eeeeee\"\n
                app:sb_ripple_duration=\"500\"\n
                app:sb_shape_type=\"round\"\n
                app:sb_color_unpressed=\"#f44336\"\n
    </string>
    <string name="t4">RippleShadowShadowButton\n
                app:sb_ripple_color=\"#8a87ee\"\n
                app:sb_ripple_duration=\"500\"\n
                app:sb_shape_type=\"rectangle\"\n
                app:sb_color_unpressed=\"#f44336\"</string>
    <string name="t3">ShadowImageView\n
                app:sb_shape_type=\"round\"</string>
    <string name="t2">ShadowButton\n
                app:sb_shape_type=\"round\"</string>
    <string name="t1">ShadowButton\n
                app:sb_radius=\"6dp\"</string>
    <string name="t0">ShadowButton\n
                app:sb_alpha_pressed=\"40\"\n
                app:sb_color_pressed=\"#0303ff\"\n
                app:sb_color_unpressed=\"#8aacee\"</string>
    <string name="framework_implementation">Framework Implementation</string>
    <string name="library_implementation">Library Implementation</string>
    <string name="library_implementation_tinted">Library Implementation (Tinted)</string>
    <string name="determinate_horizontal_progress">Determinate Horizontal ProgressBar</string>
    <string name="indeterminate_horizontal_progress">Indeterminate Horizontal ProgressBar</string>
    <string name="determinate_circular_progress">Determinate Circular ProgressBar</string>
    <string name="indeterminate_circular_progress">Indeterminate Circular ProgressBar</string>
    <string name="toolbar_progress">ProgressBar on Toolbar</string>
    <string name="horizontal_progress_toolbar">Horizontal</string>
    <string name="indeterminate_horizontal_progress_toolbar">Indeterminate Horizontal</string>
    <string name="not_available"><i>(Not Available)</i></string>
    <string name="determinate_circular_title">Determinate Circular Sample</string>
    <string name="normal_progress">Normal Style</string>
    <string name="normal_tinted_progress">Normal Style (Tinted)</string>
    <string name="dynamic_progress">Dynamic Style</string>
    <string name="dynamic_tinted_progress">Dynamic Style (Tinted)</string>
    <string name="circularImageView_item_xml_circle_title">剪裁为圆形+边框+点击效果</string>
    <string name="circularImageView_item_xml_oval_title">剪裁为椭圆形+边框+点击效果</string>
    <string name="circularImageView_item_xml_round_rect_title">剪裁为圆角矩形+边框+点击效果</string>
    <string name="circularImageView_modify_tip">可以通过右上角的按钮动态修改下图的效果</string>
    <string name="circularImageView_modify_1">改变边框颜色与宽度</string>
    <string name="circularImageView_modify_2">改变选中态边框颜色与宽度</string>
    <string name="circularImageView_modify_3">改变选中态 Mask 的颜色（带透明度）</string>
    <string name="circularImageView_modify_4">手工切换选中态</string>
    <string name="circularImageView_modify_5">改变圆角大小</string>
    <string name="circularImageView_modify_6">变为圆形</string>
    <string name="circularImageView_modify_7">变为椭圆形</string>
    <string name="circularImageView_modify_8">禁止使用touchSelect态</string>
    <string name="circularImageView_modify_9">重置为初始态</string>
    <string name="chart_toggle_values">显示/隐藏图表值</string>
    <string name="chart_toggle_x_values">显示/隐藏X轴</string>
    <string name="chart_toggle_y_values">显示/隐藏Y轴</string>
    <string name="chart_animate_x">X轴动画</string>
    <string name="chart_animate_y">Y轴动画</string>
    <string name="chart_animate_xy">XY轴动画</string>
    <string name="chart_save">图表保存</string>
    <string name="chart_toggle_bar_borders">显示/隐藏边线</string>
    <string name="chart_toggle_icons">显示/隐藏图标</string>
    <string name="chart_toggle_percent">数值/百分比</string>
    <string name="chart_toggle_hole">显示/隐藏中心圆</string>
    <string name="chart_toggle_center_text">显示/隐藏中心文字</string>
    <string name="chart_toggle_curved_slices">切换分割线样式</string>
    <string name="chart_spin_animation">旋转动画</string>
    <string name="chart_toggle_filled">切换区域填充</string>
    <string name="chart_toggle_circles">显示/隐藏圆点</string>
    <string name="chart_toggle_cubic">开启/关闭贝塞尔曲线</string>
    <string name="chart_toggle_pinch_zoom">开启/关闭自由缩放手势</string>
    <string name="chart_toggle_highlight">开启/关闭标记</string>
    <string name="tab1">信息</string>
    <string name="tab2">报告</string>
    <string name="tab3">活动</string>
    <string name="tab4">设置</string>
    <string name="pick_photo">选择图片</string>
    <string name="pick_video">选择视频</string>
    <string name="pick_photo_gif">选择gif图片</string>
    <string name="pick_photo_without_camera">选择图片（不带拍照按钮且点击不预览图片）</string>
    <string name="pick_one_photo">选择单张图片</string>
    <string name="multiple_pick_photo">多次进入PhotoPicker选择图片</string>
    <string name="item_example_number_title">第%02d条数据</string>
    <string name="item_example_number_abstract">这是测试的第%02d条数据</string>
    <string name="item_style_theme_orange_abstract">更改为橙色主题颜色</string>
    <string name="item_style_theme_red_abstract">更改为红色主题颜色</string>
    <string name="item_style_theme_green_abstract">更改为绿色主题颜色</string>
    <string name="item_style_theme_blue_abstract">更改为蓝色主题颜色</string>
    <string name="item_style_content_translation_off">下拉的时候列表内容停留在原位不动</string>
    <string name="item_style_content_translation_on">下拉的时候列表内容跟随向下偏移</string>
    <string name="item_style_horizontal_drag_on">打开左右拖动效果</string>
    <string name="item_style_horizontal_drag_off">关闭左右拖动效果</string>
    <string name="item_style_spinner_scale">下拉的时候Header的高度跟随变大</string>
    <string name="item_style_spinner_translation">下拉的时候Header的位置向下偏移</string>
    <string name="item_style_spinner_behind">下拉的时候Header固定在背后</string>
    <string name="item_style_spinner_update_on">开启显示上次更新功能</string>
    <string name="item_style_spinner_update_off">关闭显示上次更新功能</string>
    <string name="item_style_theme_default_abstract">更改为默认主题颜色</string>
    <string name="item_style_load_more">上拉加载更多</string>
    <string name="item_style_bezier_on">下拉的时候绘制贝塞尔曲线背景</string>
    <string name="item_style_bezier_off">下拉的时候不绘制贝塞尔曲线背景</string>
    <string name="item_style_app_bar_expand">展开AppBarLayout，变成可伸展头部的页面</string>
    <string name="item_style_app_bar_collapse">折叠AppBarLayout，变成正常的列表页面</string>
    <string name="item_style_store_house_english">跟换显示符号为英文</string>
    <string name="item_style_store_house_chinese">跟换显示符号为中文</string>
    <string name="item_style_store_house_icon">跟换显示符号为图标</string>
    <string name="item_style_store_house_brand">跟换显示符号为商标</string>
    <string name="item_head_style_bezier_circle">贝塞尔圆圈</string>
    <string name="item_head_style_delivery">气球快递</string>
    <string name="item_head_style_drop_box">掉落盒子</string>
    <string name="item_head_style_fly_refresh">纸飞机</string>
    <string name="item_head_style_fun_game_battle_city">战争城市</string>
    <string name="item_head_style_fun_game_hit_block">打砖块</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="tip_please_input_pwd">请输入密码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_user_protocol">用户协议</string>
    <string name="title_privacy_protocol">隐私政策</string>
    <string name="agree_protocol">我已阅读并同意</string>
    <string name="lab_and">和</string>
    <string name="verify_code_image_desc">验证码图片，点击以生成新的验证码</string>
    <string name="order">点单</string>
    <string name="bill">订单</string>
    <string name="shop_car">购物车</string>
    <string name="order_number">编号：202406101128159427</string>
    <string name="order_time">2024年06月10日 15:35</string>
    <string name="ways_order">打包</string>
    <string name="order_price">总价：￥0</string>
</resources>