<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="240dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_name"/>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:text="登  录"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_phone" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/tip_please_input_phone_number"
                android:inputType="number"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_phone_number_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_phone_number"
                app:met_regexp="@string/regex_phone_number" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/tip_please_input_pwd"
                android:inputType="textPassword"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_password_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_password"
                app:met_regexp="@string/regex_password" />

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:padding="10dp"
                android:src="@drawable/ic_eye"
                app:tint="?attr/colorAccent" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/fl_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_cloud" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="@string/hint_please_input_verify_code"
                android:inputType="text"
                app:met_clearButton="false"
                app:met_errorMessage="@string/tip_verify_code_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/lab_verify_code"
                app:met_maxCharacters="4"
                app:met_regexp="@string/regex_verify_code" />

            <ImageView
                android:id="@+id/img_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingTop="3dp"
                android:paddingEnd="10dp"
                android:paddingBottom="3dp"
                android:contentDescription="@string/verify_code_image_desc" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                android:id="@+id/tv_other_login"
                style="@style/TextStyle.Explain"
                android:layout_gravity="start"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="其他登录方式"
                android:textColor="@color/xui_config_color_primary_text" />

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                android:id="@+id/tv_forget_password"
                style="@style/TextStyle.Explain"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="忘记密码"
                android:textColor="@color/xui_config_color_primary_text" />

        </FrameLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_remember_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="记住密码"
        android:layout_marginTop="8dp"/>

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/btn_login"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:text="@string/title_login" />

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/btn_register"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:textSize="16dp"
        android:text="@string/title_register" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.0"
                android:scaleY="1.0" />

            <TextView
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="@string/agree_protocol"
                android:textColor="@color/xui_config_color_primary_text" />

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                android:id="@+id/tv_user_protocol"
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="@string/title_user_protocol"
                android:textColor="?attr/colorAccent" />

            <TextView
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="@string/lab_and"
                android:textColor="@color/xui_config_color_primary_text" />

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                android:id="@+id/tv_privacy_protocol"
                style="@style/TextStyle.Explain"
                android:layout_width="wrap_content"
                android:text="@string/title_privacy_protocol"
                android:textColor="?attr/colorAccent" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
