<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ly_content"
        android:layout_above="@+id/rg_tab">
    </FrameLayout>

    <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/menu_white_pressed">

        <RadioButton
            android:id="@+id/rb_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/order"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/order"
            android:textSize="12sp"
            android:paddingTop="8dp"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rb_shop_car"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/shop_car"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/shop_car"
            android:textSize="12sp"
            android:paddingTop="8dp"
            tools:ignore="VisualLintButtonSize" />

        <RadioButton
            android:id="@+id/rb_bill"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/bill"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:text="@string/bill"
            android:textSize="12sp"
            android:paddingTop="8dp"
            tools:ignore="VisualLintButtonSize" />
    </RadioGroup>

</RelativeLayout>
